--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -4,7 +4,7 @@
       <mat-card-title> Iniciar Sesion</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form class="form.custom" [formGroup]="formRegister">
+      <form class="form.custom">
         <mat-form-field class="input-custom">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" />
