--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,10 +1,14 @@
 <div class="card-container">
   <mat-card>
     <mat-card-header>
-      <mat-card-title> Iniciar Sesion</mat-card-title>
+      <mat-card-title> Registarse </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form class="form.custom">
+        <mat-form-field class="input-custom">
+          <mat-label>Name</mat-label>
+          <input matInput formControlName="name" />
+        </mat-form-field>
         <mat-form-field class="input-custom">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" />
@@ -14,8 +18,10 @@
           <input matInput formControlName="password" type="password" />
         </mat-form-field>
         <div class="flex">
-          <button mat-flat-button>Iniciar</button>
-          <button mat-flat-button style="margin-left: 8px">Registarse</button>
+          <button mat-flat-button>Crear Cuenta</button>
+          <button mat-flat-button style="margin-left: 8px">
+            Inciar Sesion
+          </button>
         </div>
       </form>
     </mat-card-content>
