--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,26 +1,35 @@
 <div class="card-container">
   <mat-card>
     <mat-card-header>
-      <mat-card-title> Registarse </mat-card-title>
+      <mat-card-title>Crear Cuenta</mat-card-title>
     </mat-card-header>
+
     <mat-card-content>
-      <form class="form.custom">
+      <form>
         <mat-form-field class="input-custom">
           <mat-label>Name</mat-label>
           <input matInput formControlName="name" />
         </mat-form-field>
+
         <mat-form-field class="input-custom">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" />
         </mat-form-field>
+
         <mat-form-field class="input-custom">
           <mat-label>Password</mat-label>
-          <input matInput formControlName="password" type="password" />
+          <input matInput type="password" formControlName="password" />
         </mat-form-field>
+
         <div class="flex">
-          <button mat-flat-button>Crear Cuenta</button>
-          <button mat-flat-button style="margin-left: 8px">
-            Inciar Sesion
+          <button mat-flat-button color="primary">Crear Cuenta</button>
+          <button
+            mat-stroked-button
+            color="accent"
+            routerLink="/login"
+            style="margin-left: 8px"
+          >
+            login
           </button>
         </div>
       </form>
