--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -29,6 +29,7 @@
             mat-stroked-button
             color="accent"
             routerLink="/login"
+            type="button"
             style="margin-left: 8px"
           >
             Ir al Login
