--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -28,7 +28,7 @@
           <button
             mat-stroked-button
             color="accent"
-            routerLink="/login"
+            (click)="goLogin()"
             type="button"
             style="margin-left: 8px"
           >
