--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
         <div class="flex">
           <button mat-flat-button (click)="loginSesion()">Iniciar</button>
           <button mat-flat-button (click)="register()" style="margin-left: 8px">
-            Registarse
+            Crear Cuenta
           </button>
         </div>
       </form>
