--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -23,7 +23,7 @@
 
         <div class="flex">
           <button mat-flat-button color="primary" (click)="registrarse()">
-            Registrarse
+            Crear Cuenta
           </button>
           <button
             mat-stroked-button
@@ -32,7 +32,7 @@
             type="button"
             style="margin-left: 8px"
           >
-            Ir al Login
+            Iniciar Sesion
           </button>
         </div>
       </form>
