--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -1,15 +1,15 @@
 .card-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 100px;
+}
+
+.form-custom {
+  min-width: 150px;
+  width: 100%;
 }
 
 .input-custom {
   width: 100%;
-  margin-bottom: 16px;
-}
-
-.flex {
-  display: flex;
-  justify-content: space-between;
 }
