--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+mat-card {
+  width: 100%;
+  max-width: 400px;
+  padding: 10px;
+}
